Remove white space bug between components

--- a/src/css/About.css
+++ b/src/css/About.css
@@ -27,7 +27,7 @@
 
 
   .secondaryContainer{
-    margin: 20px 20px 0 0;  
+    margin: 0px 0px 0 0;  
     overflow: auto
   }
 
