--- a/src/css/welcome.css
+++ b/src/css/welcome.css
@@ -4,7 +4,7 @@
   
   h1{
     font-size: 30px;
-    margin: 10px;
+    padding-top: 20px;
     font-family: ccbiffbamboom, sans-serif;
   }
   
@@ -53,6 +53,6 @@
   }
 
   .mint{
-    margin: auto;
+    margin-bottom: 0%;
   }
   
